config/objects/ZipFive__c.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Housing_Units__c</fullName>
        <label>Housing Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Income__c</fullName>
        <label>Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Land_Area__c</fullName>
        <label>Land Area</label>
        <precision>14</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lat__c</fullName>
        <label>Lat</label>
        <precision>9</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lon__c</fullName>
        <label>Lon</label>
        <precision>9</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Population__c</fullName>
        <label>Population</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State_Raw__c</fullName>
        <label>State Raw</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>State</label>
        <referenceTo>State__c</referenceTo>
        <relationshipName>ZipFives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Water_Area__c</fullName>
        <label>Water Area</label>
        <precision>14</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ZipThree__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ZipThree</label>
        <referenceTo>ZipThree__c</referenceTo>
        <relationshipName>ZipFives</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Zip Five</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ZipFive Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zip Fives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>